--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
-language: java
-jdk:
-  - oraclejdk8
-# Activate container based infra https://docs.travis-ci.com/user/workers/container-based-infrastructure/
-sudo: false
-install: mvn clean -B -V
-script: mvn verify -B -V -Ptravisci
-
-
 after_success:
-# Coveralls
-# Report available here : https://coveralls.io/github/find-sec-bugs/find-sec-bugs
-  - mvn clean cobertura:cobertura coveralls:report
+- mvn clean cobertura:cobertura coveralls:report
+before_install:
+- wget https://dl.dropboxusercontent.com/u/7897865/apache-maven-3.3.9.zip
+- unzip -qq apache-maven-3.3.9.zip
+- export M2_HOME=$PWD/apache-maven-3.3.9
+- export PATH=$M2_HOME/bin:$PATH
+install: mvn clean -B -V
+jdk:
+- oraclejdk8
+language: java
+notifications:
+  email: false
+  slack:
+    rooms: flakycov:U2MeVOPjdi4up1U793ubeIUZ
+    template:
+    - Build <%{build_url}|#%{build_number}> (<%{compare_url}|%{commit}>) of %{repository}@%{branch} by %{author} %{result} in %{duration}
+    - 'dashbot: %{repository_name} %{build_id}'
+script: mvn verify -B -V -Ptravisci
+sudo: false
